--- a/packages/storybook-html/stories/components/button/button.docs.mdx
+++ b/packages/storybook-html/stories/components/button/button.docs.mdx
@@ -8,7 +8,6 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <a
   href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
   target="_blank"
 >
   Check for open issues
@@ -16,27 +15,24 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Overview
 
-The button component is used to navigate to a web link or to an anchor name tag on the same page or different page.
+The button component is used to make common actions more obvious and help users more easily perform them.
 
-- The button categories are primary, secondary and tertiary.
-
-## Default and variant options
-
-### Primary
+### Default
+The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view. 
 
 <Canvas>
   <Story id="components-button--primary" width={300} />
 </Canvas>
 
 ### Secondary
-
+A button style used alongside the default primary button to highlight an important action, eg. a save button on a form.
 <Canvas>
   <Story id="components-button--secondary" />
 </Canvas>
 
 
 ### Tertiary
-
+A demphasied button style used for tertiary actions on a page, eg a Cancel button on a form.
 <Canvas>
   <Story id="components-button--tertiary" />
 </Canvas>
@@ -51,20 +47,12 @@ The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` an
 
 ```html
 <button class="uq-button">Button</button>
-<button class="uq-button uq-button--outline">Button</button>
-<button class="uq-button uq-button--text">Button</button>
 
 <button class="uq-button uq-button--tiny">Button</button>
-<button class="uq-button uq-button--tiny uq-button--outline">Button</button>
-<button class="uq-button uq-button--tiny uq-button--text">Button</button>
 
 <button class="uq-button uq-button--small">Button</button>
-<button class="uq-button uq-button--small uq-button--outline">Button</button>
-<button class="uq-button uq-button--small uq-button--text">Button</button>
 
 <button class="uq-button uq-button--large">Button</button>
-<button class="uq-button uq-button--large uq-button--outline">Button</button>
-<button class="uq-button uq-button--large uq-button--text">Button</button>
 ```
 
 ### Expand
@@ -77,68 +65,8 @@ Expand variant of the button `uq-button--expand` would extend the width of the b
 
 ```html
 <button class="uq-button uq-button--expand">Button</button>
-<button class="uq-button uq-button--expand uq-button--outline">Button</button>
-<button class="uq-button uq-button--expand uq-button--text">Button</button>
 ```
 
-## How and when to use
-
-<table className="uqds-table  uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Category</th>
-      <th className="uqds-table__heading">Style</th>
-      <th className="uqds-table__heading">How/When to use:</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Category:">
-        Primary
-      </td>
-      <td className="uqds-table__item" data-title="Styles:">
-        Normal
-      </td>
-      <td className="uqds-table__item" data-title="How/When to use:">
-        Used for the most important button and only once on the webpage.
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Category:">
-        Secondary
-      </td>
-      <td className="uqds-table__item" data-title="Styles:">
-        Normal
-      </td>
-      <td className="uqds-table__item" data-title="How/When to use:">
-        Used for important actions like save, cancel etc.
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Category:">
-        Secondary light
-      </td>
-      <td className="uqds-table__item" data-title="Styles:">
-        Normal
-      </td>
-      <td className="uqds-table__item" data-title="How/When to use:">
-        Used on dark backgrounds
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Category:">
-        Purple
-      </td>
-      <td className="uqds-table__item" data-title="Styles:">
-        Normal
-      </td>
-      <td className="uqds-table__item" data-title="How/When to use:">
-        Used in UQ related events and stories
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-- Outline & text style - Used as a tertiary button to signify their lesser prominence from the normal style.
-- Expand style - Used with design discretion when layout demands.
 
 ### States
 
