--- a/packages/storybook-html/stories/components/button/button.docs.mdx
+++ b/packages/storybook-html/stories/components/button/button.docs.mdx
@@ -6,10 +6,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 <StatusBadge.Stable />
 <StatusBadge.StableDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" target="_blank">
   Check for open issues
 </a>
 
@@ -18,21 +15,25 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 The button component is used to make common actions more obvious and help users more easily perform them.
 
 ### Default
-The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view. 
+
+The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view.
 
 <Canvas>
   <Story id="components-button--primary" width={300} />
 </Canvas>
 
 ### Secondary
+
 A button style used alongside the default primary button to highlight an important action, eg. a save button on a form.
+
 <Canvas>
   <Story id="components-button--secondary" />
 </Canvas>
 
-
 ### Tertiary
+
 A demphasied button style used for tertiary actions on a page, eg a Cancel button on a form.
+
 <Canvas>
   <Story id="components-button--tertiary" />
 </Canvas>
@@ -66,7 +67,6 @@ Expand variant of the button `uq-button--expand` would extend the width of the b
 ```html
 <button class="uq-button uq-button--expand">Button</button>
 ```
-
 
 ### States
 
